README updates
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/3.0-M1@949093 13f79535-47bb-0310-9956-ffa450edef68